chore(build): upgrade Gradle, dependencies and CI
* Upgrade Gradle to 8.14.2
* Clean up Gradle depreciations
* Use convention properties for credentials for Premium repository
* Use shadow plugin for uber Jars
* Use convention plugin for sbe generator
* Leverage docker compose for optimal container build
* Update the CI process