@@ -16,14 +16,10 @@
 
 plugins {
     id("java-application-conventions")
+    id("sbe-codec-generator")
 }
 
-@Suppress("DEPRECATION")
-val generatedDir = file("${buildDir}/generated/src/main/java")
-val codecGeneration = configurations.create("codecGeneration")
-
 dependencies {
-    "codecGeneration"(libs.sbe)
     implementation(libs.agrona)
     implementation(libs.aeron)
     implementation(libs.slf4j)
@@ -35,49 +31,5 @@ dependencies {
 }
 
 application {
-    mainClass.set("io.aeron.samples.admin.Admin")
-}
-
-sourceSets {
-    main {
-        java.srcDirs("src/main/java", generatedDir)
-    }
-}
-
-tasks {
-
-    task ("uberJar", Jar::class) {
-        group = "uber"
-        manifest {
-            attributes["Main-Class"]="io.aeron.samples.admin.Admin"
-            attributes["Add-Opens"]="java.base/sun.nio.ch"
-        }
-        archiveClassifier.set("uber")
-        from(sourceSets.main.get().output)
-        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-        dependsOn(configurations.runtimeClasspath)
-        from({
-            configurations.runtimeClasspath.get().filter { it.name.endsWith("jar") }.map { zipTree(it) }
-        })
-    }
-
-    task("generateCodecs", JavaExec::class) {
-        group = "sbe"
-        val codecsFile = "src/main/resources/protocol/protocol-codecs.xml"
-        val sbeFile = "src/main/resources/protocol/fpl/sbe.xsd"
-        inputs.files(codecsFile, sbeFile)
-        outputs.dir(generatedDir)
-        classpath = codecGeneration
-        mainClass.set("uk.co.real_logic.sbe.SbeTool")
-        args = listOf(codecsFile)
-        systemProperties["sbe.output.dir"] = generatedDir
-        systemProperties["sbe.target.language"] = "Java"
-        systemProperties["sbe.validation.xsd"] = sbeFile
-        systemProperties["sbe.validation.stop.on.error"] = "true"
-        outputs.dir(generatedDir)
-    }
-
-    compileJava {
-        dependsOn("generateCodecs")
-    }
+    mainClass = "io.aeron.samples.admin.Admin"
 }
